[gd_scene load_steps=5 format=3 uid="uid://bdb6754arptlt"]

[ext_resource type="Script" path="res://Scene/scene_menu_aide.gd" id="1_ggbl1"]
[ext_resource type="Texture2D" uid="uid://c66pw83h81o6i" path="res://image/pocadeau_white_computeur_front_view_in_a_dark_room_with_red_cab_a52e69c9-fc39-433a-8466-72ca625ab17b.jpg" id="2_njah4"]
[ext_resource type="Texture2D" uid="uid://c0xddrsitvptu" path="res://UI/image/407.png" id="3_4f6tg"]

[sub_resource type="LabelSettings" id="LabelSettings_ecnup"]
font_size = 32

[node name="sceneMenuAide" type="Node2D"]
script = ExtResource("1_ggbl1")

[node name="arrièreplan" type="Sprite2D" parent="."]
position = Vector2(563, 322)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_njah4")

[node name="Boutons" type="Node2D" parent="."]
position = Vector2(250, 100)

[node name="GridContainer" type="GridContainer" parent="Boutons"]
offset_right = 643.0
offset_bottom = 193.0
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 50
columns = 4

[node name="déplacement" type="Button" parent="Boutons/GridContainer"]
layout_mode = 2
text = "Déplacement
"

[node name="courir" type="Button" parent="Boutons/GridContainer"]
layout_mode = 2
text = "Courir"

[node name="Inventaire" type="Button" parent="Boutons/GridContainer"]
layout_mode = 2
text = "Inventaire"

[node name="Interaction" type="Button" parent="Boutons/GridContainer"]
layout_mode = 2
text = "Interaction
"

[node name="Quiter" type="Button" parent="Boutons/GridContainer"]
layout_mode = 2
text = "Quitter"

[node name="Travailler" type="Button" parent="Boutons/GridContainer"]
layout_mode = 2
text = "Travailler"

[node name="Dormir" type="Button" parent="Boutons/GridContainer"]
layout_mode = 2
text = "Dormir
"

[node name="Étudier" type="Button" parent="Boutons/GridContainer"]
layout_mode = 2
text = "Étudier
"

[node name="gagnerVie" type="Button" parent="Boutons/GridContainer"]
layout_mode = 2
text = "Regénérer la vie"

[node name="combats" type="Button" parent="Boutons/GridContainer"]
layout_mode = 2
text = "Combat
"

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
visible = false
offset_left = 168.0
offset_right = 978.0
offset_bottom = 625.0
ratio = 3.1051

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="AspectRatioContainer"]
clip_contents = true
custom_minimum_size = Vector2(300, 500)
layout_mode = 2
expand = true

[node name="stop" type="Button" parent="."]
visible = false
offset_left = 514.0
offset_top = 595.0
offset_right = 624.0
offset_bottom = 634.0
text = "Stop"

[node name="Retour" type="Button" parent="."]
offset_left = 925.0
offset_top = 517.0
offset_right = 1133.0
offset_bottom = 625.0
icon = ExtResource("3_4f6tg")

[node name="Label" type="Label" parent="."]
offset_left = 978.0
offset_top = 547.0
offset_right = 1083.0
offset_bottom = 595.0
text = "Retour
"
label_settings = SubResource("LabelSettings_ecnup")

[connection signal="pressed" from="Boutons/GridContainer/déplacement" to="." method="_on_déplacement_pressed"]
[connection signal="pressed" from="Boutons/GridContainer/courir" to="." method="_on_courir_pressed"]
[connection signal="pressed" from="Boutons/GridContainer/Inventaire" to="." method="_on_inventaire_pressed"]
[connection signal="pressed" from="Boutons/GridContainer/Interaction" to="." method="_on_interaction_pressed"]
[connection signal="pressed" from="Boutons/GridContainer/Quiter" to="." method="_on_quiter_pressed"]
[connection signal="pressed" from="Boutons/GridContainer/Travailler" to="." method="_on_travailler_pressed"]
[connection signal="pressed" from="Boutons/GridContainer/Dormir" to="." method="_on_dormir_pressed"]
[connection signal="pressed" from="Boutons/GridContainer/Étudier" to="." method="_on_étudier_pressed"]
[connection signal="pressed" from="Boutons/GridContainer/gagnerVie" to="." method="_on_gagner_vie_pressed"]
[connection signal="pressed" from="Boutons/GridContainer/combats" to="." method="_on_combats_pressed"]
[connection signal="finished" from="AspectRatioContainer/VideoStreamPlayer" to="." method="_on_video_stream_player_finished"]
[connection signal="pressed" from="stop" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Retour" to="." method="_on_retour_pressed"]
